--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,8 +13,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    // font-weight: 400, 600, 700;
-    background-color:var(--pink);
+    font-weight: 400, 600, 700;
 }
 
 h1,
@@ -25,4 +24,11 @@ h5,
 h6 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
+}
+
+li{
+    list-style: none;
+}
+a{
+    text-decoration: none;
 }
