--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,8 @@
 @import "base/base";
 @import "base/typography";
 @import "components/button";
+@import "components/illustrations";
+
+@import "layouts/footer";
 @import "layouts/navbar";
 @import "layouts/intro.scss";
