--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,27 @@ li {
 a {
   text-decoration: none; }
 
+.heading__primary {
+  font-size: 7rem;
+  font-weight: 700; }
+
+.heading__secondary {
+  font-size: 4rem;
+  font-weight: 600; }
+
+.heading__tertiary {
+  font-size: 3rem; }
+
+.paragraph__primary {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--very-dark-cyan); }
+
+.paragraph__secondary {
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: var(--very-dark-cyan); }
+
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -65,6 +86,29 @@ a {
   .btn--white::after {
     background-color: transparent; }
 
+.btn--pink {
+  background-color: var(--pink);
+  color: #fff; }
+  .btn--pink, .btn--pink:link, .btn--pink:visited {
+    padding: 2rem 5rem;
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: unset; }
+  .btn--pink::after {
+    background-color: var(--pink); }
+
+.btn--straight {
+  background-color: var(--pink);
+  color: #fff; }
+  .btn--straight, .btn--straight:link, .btn--straight:visited {
+    padding: 1rem 3rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: unset;
+    border-radius: 5px; }
+  .btn--straight::after {
+    background-color: var(--pink); }
+
 .btn::after {
   content: "";
   display: inline-block;
@@ -77,6 +121,80 @@ a {
   z-index: -1;
   transition: all .4s; }
 
+.section-grow {
+  margin-top: 10rem; }
+
+.svgupper svg {
+  display: block; }
+
+.grow {
+  background-color: #F6FBFF; }
+  .grow svg {
+    display: block; }
+
+.growth {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 20rem; }
+  .growth__text {
+    padding: 0 10rem; }
+    .growth__text p {
+      line-height: 1.5;
+      margin-top: 2rem;
+      padding-right: 15rem; }
+  .growth__image {
+    width: 70%;
+    margin-top: 15rem; }
+
+.section-conversations {
+  margin-top: 10rem; }
+
+.conversations {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 10rem; }
+  .conversations__image {
+    width: 70%; }
+  .conversations__text {
+    padding-left: 10rem; }
+    .conversations__text p {
+      line-height: 1.5;
+      margin-top: 2rem; }
+
+.footer {
+  background-color: var(--very-dark-cyan);
+  display: flex;
+  margin-top: -5rem;
+  align-items: center; }
+  .footer__links {
+    display: flex; }
+    .footer__links img {
+      margin-right: 1.5rem; }
+  .footer .side1 {
+    margin: 4rem 10rem;
+    color: var(--very-pale-blue); }
+    .footer .side1 p {
+      color: var(--very-pale-blue);
+      padding-right: 30rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem; }
+      .footer .side1 p img {
+        margin-right: 1rem; }
+  .footer .side2 {
+    color: var(--very-pale-blue); }
+    .footer .side2 p {
+      color: var(--very-pale-blue);
+      margin-top: 2rem;
+      width: 70%;
+      margin-bottom: 2rem; }
+    .footer .side2 input {
+      border: none;
+      padding: 1rem 3rem;
+      border-radius: 5px;
+      margin-right: 2rem; }
+
 .nav {
   padding: 3rem; }
   .nav__logo {
@@ -84,3 +202,29 @@ a {
   .nav ul {
     display: flex;
     justify-content: space-between; }
+
+.section-intro {
+  margin-top: 10rem; }
+
+.intro {
+  text-align: center;
+  margin: 0 auto; }
+  .intro__img {
+    width: 90rem; }
+  .intro h1 {
+    margin-bottom: 4rem; }
+  .intro p {
+    margin: 0 auto;
+    margin-bottom: 4rem; }
+  .intro li {
+    margin-bottom: 6rem; }
+  .intro__stats {
+    margin-top: 15rem;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    position: relative; }
+    .intro__stats--icon {
+      display: flex; }
+    .intro__stats .paragraph__secondary {
+      font-size: 2rem; }
