complete mobile and tablet view

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,14 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @include respond(tab-port){
+        font-size: 54%;
+    }
+
+    @include respond(phone){
+        font-size: 50%;
+    }
 }
 
 body {
