--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 1800] is where our normal styles apply
+1800px + :      Big desktop
+
+$breakpoint arguement choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER: Base + typography > general layout + grid > page layout > components
+
+1em = 16px
+*/
 :root {
   --pink: hsl(322, 100%, 66%);
   --light-pink: hsl(321, 100%, 78%);
@@ -15,6 +32,12 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 54%; } }
+  @media only screen and (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -131,21 +154,54 @@ a {
   background-color: #F6FBFF; }
   .grow svg {
     display: block; }
+  @media only screen and (max-width: 37.5em) {
+    .grow__image {
+      text-align: center; } }
 
 .growth {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 20rem; }
+  @media only screen and (max-width: 37.5em) {
+    .growth {
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      height: 40rem; } }
   .growth__text {
     padding: 0 10rem; }
+    @media only screen and (max-width: 56.25em) {
+      .growth__text {
+        padding: 0 5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .growth__text {
+        padding: 0 5rem;
+        text-align: center; } }
     .growth__text p {
       line-height: 1.5;
       margin-top: 2rem;
       padding-right: 15rem; }
+      @media only screen and (max-width: 56.25em) {
+        .growth__text p {
+          font-size: 2.3rem;
+          padding-right: 5rem; } }
+      @media only screen and (max-width: 37.5em) {
+        .growth__text p {
+          padding: 0;
+          font-size: 1.8rem; } }
   .growth__image {
     width: 70%;
     margin-top: 15rem; }
+    @media only screen and (max-width: 56.25em) {
+      .growth__image {
+        width: 100%;
+        margin-left: -5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .growth__image {
+        margin-top: 0;
+        margin-bottom: 2rem;
+        width: 60%; } }
 
 .section-conversations {
   margin-top: 10rem; }
@@ -155,19 +211,58 @@ a {
   align-items: center;
   justify-content: space-around;
   margin: 0 10rem; }
+  @media only screen and (max-width: 56.25em) {
+    .conversations {
+      display: flex;
+      justify-content: space-between;
+      margin: 0 5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .conversations {
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      text-align: center;
+      justify-content: center; } }
   .conversations__image {
     width: 70%; }
+    @media only screen and (max-width: 56.25em) {
+      .conversations__image {
+        width: 90%; } }
+    @media only screen and (max-width: 37.5em) {
+      .conversations__image {
+        margin-bottom: 2rem; } }
   .conversations__text {
     padding-left: 10rem; }
+    @media only screen and (max-width: 56.25em) {
+      .conversations__text {
+        padding: 0; } }
+    @media only screen and (max-width: 37.5em) {
+      .conversations__text {
+        padding: 0; } }
     .conversations__text p {
       line-height: 1.5;
       margin-top: 2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .conversations__text p {
+          font-size: 2.3rem;
+          padding: 0; } }
+      @media only screen and (max-width: 37.5em) {
+        .conversations__text p {
+          padding: 0 7rem;
+          font-size: 1.8rem; } }
 
 .footer {
   background-color: var(--very-dark-cyan);
   display: flex;
   margin-top: -5rem;
   align-items: center; }
+  @media only screen and (max-width: 56.25em) {
+    .footer {
+      margin-top: -1rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .footer {
+      flex-direction: column;
+      margin-top: -1rem; } }
   .footer__links {
     display: flex; }
     .footer__links img {
@@ -175,47 +270,121 @@ a {
   .footer .side1 {
     margin: 4rem 10rem;
     color: var(--very-pale-blue); }
+    @media only screen and (max-width: 37.5em) {
+      .footer .side1 {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5rem;
+        order: 2; } }
     .footer .side1 p {
       color: var(--very-pale-blue);
       padding-right: 30rem;
       margin-top: 2rem;
       margin-bottom: 2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .footer .side1 p {
+          padding: 0; } }
+      @media only screen and (max-width: 37.5em) {
+        .footer .side1 p {
+          padding-right: 5rem;
+          font-size: 1.8rem; } }
       .footer .side1 p img {
         margin-right: 1rem; }
   .footer .side2 {
     color: var(--very-pale-blue); }
+    @media only screen and (max-width: 37.5em) {
+      .footer .side2 {
+        order: 1; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer .side2 .side2hp {
+        margin-left: 6rem;
+        margin-top: 4rem; } }
     .footer .side2 p {
       color: var(--very-pale-blue);
       margin-top: 2rem;
       width: 70%;
       margin-bottom: 2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .footer .side2 p {
+          width: 85%; } }
+      @media only screen and (max-width: 37.5em) {
+        .footer .side2 p {
+          width: 80%;
+          font-size: 1.8rem; } }
     .footer .side2 input {
       border: none;
       padding: 1rem 3rem;
       border-radius: 5px;
       margin-right: 2rem; }
+      @media only screen and (max-width: 37.5em) {
+        .footer .side2 input {
+          margin: 3rem; } }
+    @media only screen and (max-width: 56.25em) {
+      .footer .side2 .input__btn {
+        display: flex;
+        flex-direction: column; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer .side2 .input__btn {
+        display: flex;
+        flex-direction: column; } }
+    @media only screen and (max-width: 56.25em) {
+      .footer .side2 .input__btn .btn {
+        margin: 1rem auto; } }
+    @media only screen and (max-width: 37.5em) {
+      .footer .side2 .input__btn .btn {
+        margin: 0 auto; } }
 
-.nav {
-  padding: 3rem; }
-  .nav__logo {
-    width: 90%; }
-  .nav ul {
-    display: flex;
-    justify-content: space-between; }
+.nav__logo {
+  width: 90%; }
+  @media only screen and (max-width: 37.5em) {
+    .nav__logo {
+      width: 50%; } }
+
+.nav ul {
+  padding: 5rem 3rem;
+  display: flex;
+  justify-content: space-between; }
+  @media only screen and (max-width: 37.5em) {
+    .nav ul a {
+      margin-left: -5rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .nav ul {
+      display: flex;
+      justify-content: space-around; } }
 
 .section-intro {
   margin-top: 10rem; }
+  @media only screen and (max-width: 37.5em) {
+    .section-intro {
+      margin-top: 5rem; } }
 
 .intro {
   text-align: center;
   margin: 0 auto; }
   .intro__img {
     width: 90rem; }
+    @media only screen and (max-width: 56.25em) {
+      .intro__img {
+        width: 70%; } }
+    @media only screen and (max-width: 37.5em) {
+      .intro__img {
+        width: 60%; } }
   .intro h1 {
-    margin-bottom: 4rem; }
+    margin-bottom: 4rem;
+    padding: 0 2.5rem; }
+    @media only screen and (max-width: 37.5em) {
+      .intro h1 {
+        padding: 0 1.5rem;
+        font-size: 3.5rem;
+        margin-bottom: 3rem; } }
   .intro p {
     margin: 0 auto;
-    margin-bottom: 4rem; }
+    margin-bottom: 4rem;
+    padding: 0 5rem;
+    font-weight: 400; }
+    @media only screen and (max-width: 37.5em) {
+      .intro p {
+        padding: 0 2rem; } }
   .intro li {
     margin-bottom: 6rem; }
   .intro__stats {
@@ -224,7 +393,17 @@ a {
     justify-content: space-around;
     text-align: center;
     position: relative; }
+    @media only screen and (max-width: 37.5em) {
+      .intro__stats {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5rem; } }
     .intro__stats--icon {
       display: flex; }
+      @media only screen and (max-width: 37.5em) {
+        .intro__stats--icon {
+          display: inline;
+          width: 5rem;
+          margin-top: 3rem; } }
     .intro__stats .paragraph__secondary {
       font-size: 2rem; }
