--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -12,6 +12,10 @@
         font-size: 1.5rem;
         border: 2px solid var(--pink);
         cursor: pointer;
+
+        @include respond(phone){
+    
+        }
     }
     
     &:hover {
