--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,51 +1,142 @@
-.footer{
+.footer {
     background-color: var(--very-dark-cyan);
     display: flex;
     margin-top: -5rem;
     align-items: center;
 
-
-    &__links{
-        display: flex;
-        img{
-            margin-right: 1.5rem;
-        }
-        
+    @include respond(tab-port) {
+        margin-top: -1rem;
     }
 
-    .side1{
+    @include respond(phone) {
+        flex-direction: column;
+        margin-top: -1rem;
+    }
+
+
+    &__links {
+        display: flex;
+
+        img {
+            margin-right: 1.5rem;
+        }
+
+    }
+
+    .side1 {
         margin: 4rem 10rem;
-       
+
+        @include respond(phone) {
+            display: flex;
+            flex-direction: column;
+            //    margin-right: 0rem;
+            margin-top: 5rem;
+            order: 2;
+
+        }
+
+
         color: var(--very-pale-blue);
-        p{
+
+        p {
             color: var(--very-pale-blue);
             padding-right: 30rem;
             margin-top: 2rem;
             margin-bottom: 2rem;
-            img{
+
+            @include respond(tab-port) {
+                padding: 0;
+            }
+
+            @include respond(phone) {
+                padding-right: 5rem;
+                font-size: 1.8rem;
+
+            }
+
+            img {
                 margin-right: 1rem;
             }
         }
     }
 
 
-    .side2{
+    .side2 {
         color: var(--very-pale-blue);
 
+        @include respond(phone) {
 
-        p{
+            order: 1;
+
+        }
+
+
+        .side2hp {
+            @include respond(phone) {
+                margin-left: 6rem;
+                margin-top: 4rem;
+            }
+        }
+
+
+
+
+
+        p {
             color: var(--very-pale-blue);
             margin-top: 2rem;
             width: 70%;
             margin-bottom: 2rem;
 
+            @include respond(tab-port) {
+                width: 85%;
+            }
+
+            @include respond(phone) {
+                width: 80%;
+                font-size: 1.8rem;
+            }
+
         }
 
-        input{
+        input {
             border: none;
-            padding:1rem 3rem;
+            padding: 1rem 3rem;
             border-radius: 5px;
             margin-right: 2rem;
+
+            @include respond(phone) {
+                margin: 3rem;
+            }
+
+        }
+
+        .input__btn {
+
+            @include respond(tab-port) {
+                display: flex;
+                flex-direction: column;
+            }
+
+            @include respond(phone) {
+                display: flex;
+                flex-direction: column;
+
+            }
+
+            .btn {
+
+                @include respond(tab-port) {
+                    margin: 1rem auto;
+                }
+
+                @include respond(phone) {
+
+                    margin: 0 auto;
+
+                }
+            }
+
         }
     }
 }
